2012-03-02  Philippe Normand  <pnormand@igalia.com>

        [GTK] security/block-test.html baselines differ from mac
        https://bugs.webkit.org/show_bug.cgi?id=78343

        Reviewed by Martin Robinson.

        Improved the FrameLoader error heuristics to match mac behavior a
        bit more.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (pathFromSoupURI): Handle ftp urls the same as http urls.
        (descriptionSuitableForTestResult): Map WebKitPolicyError to WebKitErrorDomain.

2012-03-02  Andras Becsi  <andras.becsi@nokia.com>

        [Qt][WK2] Fix typo in patch committed in r109575

        Unreviewed typo fix.

        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (MiniBrowserApplication::notify): Cache the position
        in floating point coordinates.

2012-03-02  Andras Becsi  <andras.becsi@nokia.com>

        [Qt][WK2] Infinite loop on history navigation, when panning
        https://bugs.webkit.org/show_bug.cgi?id=79119

        Reviewed by Simon Hausmann.

        Make the touch mocking more robust by creating touch events
        directly and sending them synchronously to the browser window.
        If the sent touch event was not accepted we propagate the
        original mouse event to its target.
        This way we make sure we only send either a touch or a mouse
        event and do not end up in an infinite loop between our mocking
        code and the Qt5 automatic mouse event synthesizing.

        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::updateVisualMockTouchPoints):
        * MiniBrowser/qt/BrowserWindow.h:
        (BrowserWindow):
        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (touchRectForPosition):
        (MiniBrowserApplication::notify):
        (MiniBrowserApplication::sendTouchEvent):
        * MiniBrowser/qt/MiniBrowserApplication.h:
        (MiniBrowserApplication):

2012-03-02  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
